--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="container"></div>
   <audio id="bgm" autoplay loop>
-    <source src="music.mp3" type="audio/mpeg">
+    <source src="v14044g50000d1funuvog65k1rp5r8c0.mp3" type="audio/mpeg">
   </audio>
   <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/geometries/TextGeometry.js"></script>
