--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
 </head>
 <body>
   <div id="container"></div>
-  <audio id="bgm" autoplay loop>
-    <source src="v14044g50000d1funuvog65k1rp5r8c0.mp3" type="audio/mpeg">
-  </audio>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/geometries/TextGeometry.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/loaders/FontLoader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/controls/OrbitControls.js"></script>
+
+  <!-- Nhạc nền -->
+<audio id="bgm" autoplay loop>
+  <source src="v14044g50000d1funuvog65k1rp5r8c0.mp3" type="audio/mpeg">
+</audio>
+
+
+  <!-- Three.js core -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+
+  <!-- Font & TextGeometry -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
+
+  <!-- OrbitControls (bản 0.128 mới có THREE.OrbitControls) -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+
+  <!-- File code chính -->
   <script src="script.js"></script>
 </body>
 </html>
