--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!doctype html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Trái Tim Ngân Hà</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="container"></div>
 
-  <!-- Nhạc nền -->
-<audio id="bgm" autoplay loop>
-  <source src="v14044g50000d1funuvog65k1rp5r8c0.mp3" type="audio/mpeg">
-</audio>
+  <!-- Nhạc nền (tên file phải khớp với repo của bạn) -->
+  <audio id="bgm" loop>
+    <source src="v14044g50000d1funuvog65k1rp5r8c0.mp3" type="audio/mpeg">
+  </audio>
 
-
-  <!-- Three.js core -->
+  <!-- three.js và helpers (đã dùng version tương thích với OrbitControls + TextGeometry) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-
-  <!-- Font & TextGeometry -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
-
-  <!-- OrbitControls (bản 0.128 mới có THREE.OrbitControls) -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
 
-  <!-- File code chính -->
+  <!-- code chính -->
   <script src="script.js"></script>
 </body>
 </html>
