--- a/index.html
+++ b/index.html
@@ -1,26 +1,161 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Trái Tim Ngân Hà</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Trái tim hạt</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: black;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+    #musicBtn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 28px;
+      color: white;
+      background: rgba(255, 100, 150, 0.6);
+      cursor: pointer;
+      z-index: 1000;
+      transition: all 0.3s ease;
+      user-select: none;
+    }
+    #musicBtn:hover {
+      background: rgba(255, 100, 150, 0.9);
+      transform: scale(1.1);
+    }
+    /* Nút xoay khi nhạc phát */
+    .spinning {
+      animation: spin 3s linear infinite;
+    }
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
-  <div id="container"></div>
+  <canvas id="canvas"></canvas>
 
-  <!-- Nhạc nền (tên file phải khớp với repo của bạn) -->
+  <!-- Nhạc nền -->
   <audio id="bgm" loop>
     <source src="v14044g50000d1funuvog65k1rp5r8c0.mp3" type="audio/mpeg">
   </audio>
+  <div id="musicBtn">🎵</div>
 
-  <!-- three.js và helpers (đã dùng version tương thích với OrbitControls + TextGeometry) -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    let w = canvas.width = window.innerWidth;
+    let h = canvas.height = window.innerHeight;
 
-  <!-- code chính -->
-  <script src="script.js"></script>
+    // text
+    const text = "❤️ CHÚC MỪNG TRUNG THU ❤️";
+    ctx.font = "bold 120px Arial";
+    ctx.fillStyle = "white";
+    ctx.textAlign = "center";
+    ctx.fillText(text, w/2, h/2);
+
+    const textData = ctx.getImageData(0, 0, w, h).data;
+
+    // tạo hạt từ chữ + trái tim
+    const particles = [];
+    for (let y = 0; y < h; y += 6) {
+      for (let x = 0; x < w; x += 6) {
+        const index = (y * w + x) * 4;
+        if (textData[index+3] > 128) {
+          particles.push({
+            x: Math.random() * w,
+            y: h + Math.random() * 200,
+            targetX: x,
+            targetY: y,
+            vx: 0,
+            vy: 0
+          });
+        }
+      }
+    }
+
+    function drawHeart(x, y, size) {
+      ctx.save();
+      ctx.translate(x, y);
+      ctx.scale(size, size);
+      ctx.beginPath();
+      ctx.moveTo(0, -1);
+      ctx.bezierCurveTo(1, -1.5, 2, 0, 0, 2);
+      ctx.bezierCurveTo(-2, 0, -1, -1.5, 0, -1);
+      ctx.closePath();
+      ctx.fill();
+      ctx.restore();
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, w, h);
+      ctx.fillStyle = "pink";
+      for (let p of particles) {
+        // lực hút xoáy vào target
+        let dx = p.targetX - p.x;
+        let dy = p.targetY - p.y;
+        let dist = Math.sqrt(dx*dx + dy*dy);
+        let angle = Math.atan2(dy, dx) + Math.sin(Date.now()/500) * 0.2;
+        let force = Math.min(0.05, dist/1000);
+
+        p.vx += Math.cos(angle) * force;
+        p.vy += Math.sin(angle) * force;
+        p.vx *= 0.9;
+        p.vy *= 0.9;
+        p.x += p.vx;
+        p.y += p.vy;
+
+        drawHeart(p.x, p.y, 3);
+      }
+      requestAnimationFrame(animate);
+    }
+    animate();
+
+    window.onresize = () => {
+      w = canvas.width = window.innerWidth;
+      h = canvas.height = window.innerHeight;
+    };
+
+    // Music control
+    const bgm = document.getElementById("bgm");
+    const btn = document.getElementById("musicBtn");
+    let playing = false;
+
+    btn.addEventListener("click", () => {
+      if (!playing) {
+        bgm.play();
+        btn.textContent = "⏸";
+        btn.classList.add("spinning");
+      } else {
+        bgm.pause();
+        btn.textContent = "🎵";
+        btn.classList.remove("spinning");
+      }
+      playing = !playing;
+    });
+
+    // thử autoplay
+    bgm.play().then(() => {
+      btn.textContent = "⏸";
+      btn.classList.add("spinning");
+      playing = true;
+    }).catch(() => {
+      console.log("Autoplay bị chặn, chờ click...");
+    });
+  </script>
 </body>
 </html>
